--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ Final Project/UserSettings/Layouts/default-2021.dwlt
 Final Project/Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Electronic Highway Sign SDF.asset
 Final Project/UserSettings/EditorUserSettings.asset
 Final Project/Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Electronic Highway Sign SDF.asset.meta
+Final Project/UserSettings/
+Final Project/Assets/TextMesh Pro/Examples & Extras/
